@@ -128,3 +128,18 @@ Your matching engine thread is the only thing that runs there.
 No other user processes, no kernel housekeeping, no random cron jobs.
 
 The cache, branch predictors, TLB — all stay “warm” with your code and data.
+
+#### Start Media Driver
+curl -O https://repo1.maven.org/maven2/io/aeron/aeron-all/1.44.0/aeron-all-1.44.0.jar
+
+java \
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+-Daeron.dir=/tmp/aeron \
+-Daeron.dir.delete.on.start=true \
+-Daeron.print.configuration=true \
+-Daeron.event.log=true \
+-Daeron.client.liveness.timeout=10000000000 \
+-Daeron.driver.timeout=60000 \
+-cp aeron-all-1.44.0.jar io.aeron.driver.MediaDriver
+
+
